# pyallel

./: Dockerfile  Dockerfile.alpine  LICENSE  README.md  benchmark_process.py  build.sh  build_all.sh  pyproject.toml  requirements_dev.txt
.github/workflows/: build.yml  build_v2.yml  build_v3.yml  test.yml
src/pyallel/: colours.py  constants.py  errors.py  logging.py  main.py  parser.py  printer.py  process.py  process_group.py  process_group_manager.py
tests/: conftest.py  test_main.py  test_printer.py  test_process.py  test_process_group.py  test_process_manager.py  utils.py
tests/assets/: test_handle_multiple_signals.sh  test_output.sh  test_process_interrupt_with_trapped_output.sh
