[tool.poetry]
name = "pyallel"
version = "1.3.3"
description = "Run and handle the output of multiple executables in pyallel (as in parallel)"
authors = ["Daniel Black <danielcrblack@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Danthewaann/pyallel"
repository = "https://github.com/Danthewaann/pyallel"
keywords = ["parallel", "command", "runner", "executable", "shell", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.scripts]
pyallel = "pyallel.main:entry_point"

[tool.poetry.dependencies]
python = ">=3.8,<3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
pyinstaller = "6.11.0"

[tool.mypy]
strict = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-vvv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
