[project]
name = "pyallel"
version = "2.0.4"
description = "Run and handle the output of multiple executables in pyallel (as in parallel)"
authors = [{ name = "Daniel Black", email = "danielcrblack@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = [
    "parallel",
    "command",
    "runner",
    "executable",
    "shell",
    "terminal",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/Danthewaann/pyallel"
Repository = "https://github.com/Danthewaann/pyallel"

[project.scripts]
pyallel = "pyallel.main:entry_point"

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "mypy>=1.7.0,<2",
    "pyinstaller==6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-vvv"
